--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compile "org.jetbrains.anko:anko:$anko_version"
+
+    compile "com.google.code.gson:gson:2.8.0"
 }
 repositories {
     mavenCentral()
