--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile "org.jetbrains.anko:anko:$anko_version"
 
     compile "com.google.code.gson:gson:2.8.0"
+    compile "com.squareup.picasso:picasso:2.5.2"
 }
 repositories {
     mavenCentral()
